# cs3113-game-programming

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
ai/: Entity.cpp  Entity.h  Map.cpp  Map.h  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
common/includes/: ShaderProgram.h  stb_image.h
common/includes/glm/: common.hpp  exponential.hpp  fwd.hpp  geometric.hpp  integer.hpp  matrix.hpp  vector_relational.hpp
common/includes/glm/detail/: _noise.hpp  _swizzle.hpp  _vectorize.hpp  compute_common.hpp  compute_vector_relational.hpp  func_common.inl  func_exponential.inl  func_geometric.inl  func_integer.inl  func_matrix.inl  func_packing.inl  func_trigonometric.inl  func_vector_relational.inl  glm.cpp  qualifier.hpp  setup.hpp  type_float.hpp  type_half.hpp  type_half.inl  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x3.inl  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x2.inl  type_mat4x3.hpp  type_mat4x3.inl  type_mat4x4.hpp  type_mat4x4.inl  type_quat.hpp  type_quat.inl  type_vec1.hpp  (+7 more)
common/includes/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_common.hpp  matrix_common.inl  matrix_double2x2.hpp  matrix_double2x2_precision.hpp  matrix_double2x3.hpp  matrix_double2x3_precision.hpp  matrix_double2x4.hpp  matrix_double2x4_precision.hpp  matrix_double3x2.hpp  matrix_double3x2_precision.hpp  matrix_double3x3.hpp  matrix_double3x3_precision.hpp  matrix_double3x4.hpp  matrix_double3x4_precision.hpp  matrix_double4x2.hpp  matrix_double4x2_precision.hpp  matrix_double4x3.hpp  matrix_double4x3_precision.hpp  matrix_double4x4.hpp  matrix_double4x4_precision.hpp  matrix_float2x2.hpp  matrix_float2x2_precision.hpp  matrix_float2x3.hpp  matrix_float2x3_precision.hpp  matrix_float2x4.hpp  matrix_float2x4_precision.hpp  matrix_float3x2.hpp  matrix_float3x2_precision.hpp  matrix_float3x3.hpp  (+69 more)
common/src/: ShaderProgram.cpp
last_stand/: Dynamic.cpp  Dynamic.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Level.cpp  Level.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Mob.cpp  Mob.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Scene.cpp  Scene.h  StaticEntity.cpp  StaticEntity.h  Tank.cpp  Tank.h  TextureObject.cpp  TextureObject.h  Utility.cpp  Utility.h  main.cpp  object_mapping.txt  terrain_mapping.txt
lunar_lander/: Entity.cpp  Entity.h  main.cpp
lunar_lander2/: Entity.cpp  Entity.h  main.cpp
platformer/: Dynamic.cpp  Dynamic.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Level.cpp  Level.h  Level1.cpp  Level1.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Mob.cpp  Mob.h  Player.cpp  Player.h  Scene.h  Utility.cpp  Utility.h  main.cpp
pong/: main.cpp
simple-2d-scene/: README.md  main.cpp
simple-2d-scene/simple-2d-scene/: main.cpp
simple-2d-scene/simple-2d-scene.xcodeproj/: project.pbxproj
(+120 files in other folders)
